Create page login-mobile first

--- a/index.html
+++ b/index.html
@@ -13,29 +13,34 @@
       rel="stylesheet"
     />
     <!-- Style -->
+
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <main>
-      <div class="container">
-        <section class="figure">
-          <img
-            class="figure__image"
-            src="./img/figure-login.png"
-            alt="Figura de um cachorro"
-          />
-          <h2 class="figure__title">Bem - Vindo</h2>
-        </section>
-        <section class="login">
-          <img src="./img/logo-login.svg" alt="Logo da iPet Social" />
-
-          <h1>Login</h1>
-          <a href="http://"
-            ><img src="./img/logo-google.svg" alt="Logo da Google" />Continue
-            com o Google</a
-          >
-        </section>
+    <section class="figure">
+      <div class="container contain">
+        <img
+          class="figure__image"
+          src="./img/figure-login.png"
+          alt="Figura de um cachorro"
+        />
+        <h2 class="figure__title">Bem - Vindo</h2>
       </div>
-    </main>
+    </section>
+    <section class="login">
+      <div class="container contain__login">
+        <img src="./img/logo-login.svg" alt="Logo da iPet Social" />
+
+        <h1 class="login__title">Login</h1>
+
+        <a class="login__link" href="http://"
+          ><img
+            class="login__icon"
+            src="./img/logo-google.svg"
+            alt="Logo da Google"
+          />Continue com o Google</a
+        >
+      </div>
+    </section>
   </body>
 </html>
