correction of logo

--- a/index.html
+++ b/index.html
@@ -29,10 +29,15 @@
     </section>
     <section class="login">
       <div class="container contain__login">
-        <img src="./img/logo-login.svg" alt="Logo da iPet Social" />
+        <header class="login__header">
+          <img
+            class="login__logo"
+            src="./img/logo-login.svg"
+            alt="Logo da iPet Social"
+          />
 
-        <h1 class="login__title">Login</h1>
-
+          <h1 class="login__title">Login</h1>
+        </header>
         <a class="login__link" href="http://"
           ><img
             class="login__icon"
