--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <!-- Style -->
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/global.css" />
   </head>
   <body>
     <section class="figure">
