--- a/pages/profile.html
+++ b/pages/profile.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <!-- Style -->
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/global.css" />
     <link rel="stylesheet" href="../css/profile.css" />
   </head>
   <body></body>
