--- a/index.html
+++ b/index.html
@@ -1,51 +1,81 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login - IPet</title>
-    <!-- Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Style -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Login - IPet</title>
+		<!-- Font -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+		/>
+		<!-- Style -->
+		<link rel="stylesheet" href="./css/global.css" />
+		<link rel="stylesheet" href="./css/login.css" />
+		<!-- <script src="https://www.gstatic.com/firebasejs/9.8.4/firebase-app-compat.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/9.8.4/firebase-auth-compat.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/9.8.4/firebase-firestore-compat.js"></script>
+		<script src="index.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
+<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" /> -->
+		<script src="https://accounts.google.com/gsi/client" async defer></script>
+	</head>
+	<body>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-12 col-md-4 col-reset">
+					<section class="figure">
+						<div class="contain">
+							<img
+								class="figure__image"
+								src="./assets/img/figure-login.png"
+								alt="Figura de um cachorro"
+							/>
+							<h2 class="figure__title title-moble">Bem - Vindo</h2>
+						</div>
+					</section>
+				</div>
 
-    <link rel="stylesheet" href="./css/global.css" />
-  </head>
-  <body>
-    <section class="figure">
-      <div class="container contain">
-        <img
-          class="figure__image"
-          src="./img/figure-login.png"
-          alt="Figura de um cachorro"
-        />
-        <h2 class="figure__title">Bem - Vindo</h2>
-      </div>
-    </section>
-    <section class="login">
-      <div class="container contain__login">
-        <header class="login__header">
-          <img
-            class="login__logo"
-            src="./img/logo-login.svg"
-            alt="Logo da iPet Social"
-          />
-
-          <h1 class="login__title">Login</h1>
-        </header>
-        <a class="login__link" href="http://"
-          ><img
-            class="login__icon"
-            src="./img/logo-google.svg"
-            alt="Logo da Google"
-          />Continue com o Google</a
-        >
-      </div>
-    </section>
-  </body>
+				<div class="col-sm-12 col-md-8 col-reset">
+					<section class="login">
+						<div class="contain__login">
+							<header class="login__header">
+								<img
+									class="login__logo"
+									src="./assets/icon/logo.svg"
+									alt="Logo da iPet Social"
+								/>
+                <div class="line__figure"></div>
+                <h2 class="header__title title-desk">Bem vindo</h2>
+								<p class="login__title">Login</p>
+							</header>
+							<div
+								id="g_id_onload"
+								data-client_id="YOUR_GOOGLE_CLIENT_ID"
+								data-login_uri="http://localhost/pages/profile.html"
+								data-auto_prompt="false"
+							></div>
+							<div
+								class="g_id_signin"
+								data-type="standard"
+								data-size="large"
+								data-theme="filled_blue"
+								data-text="sign_in_with"
+								data-shape="pill"
+								data-logo_alignment="left"
+                class="btn-login-google"
+							></div>
+						</div>
+					</section>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
