Iniciado o layout do feed

--- a/pages/feed.html
+++ b/pages/feed.html
@@ -16,5 +16,22 @@
     <link rel="stylesheet" href="../css/global.css" />
     <link rel="stylesheet" href="../css/feed.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container-fluid">
+      <nav class="nav nav-pills nav-fill menu">
+        <div class="menu__content">
+          <div class="nav-border">
+            <a href="/pages/profile.html">
+              <img src="../assets/icon/home.svg" alt="Icone do Perfil">
+            </a>      
+          </div>
+          <div class="nav-border">
+            <a href="#">
+              <img src="../assets/icon/icon-post.svg" alt="Adicionar uma nova postagem">
+            </a>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </body>
 </html>
