--- a/pages/profile.html
+++ b/pages/profile.html
@@ -12,9 +12,70 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+		/>
     <!-- Style -->
     <link rel="stylesheet" href="../css/global.css" />
     <link rel="stylesheet" href="../css/profile.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container-fluid">
+      <nav class="nav nav-pills nav-fill menu">
+        <div class="menu__content">
+          <div class="nav-border">
+            <a href="/pages/feed.html">
+              <img src="../assets/icon/icon-profile.svg" alt="Icone do Perfil">
+            </a>      
+          </div>
+          <div class="nav-border">
+            <a href="#">
+              <img src="../assets/icon/icon-post.svg" alt="Adicionar uma nova postagem">
+            </a>
+          </div>
+        </div>
+      </nav>
+      <main class="main__images">
+        <div class="card image__post">
+          <img src="../assets/img/feed-main.png" alt="Icone do Perfil">
+          <div class="card__description">
+            <div class="card__description__profile">
+              <h2>@Profile</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a similique aliquid aspernatur ab, tempore consequuntur corrupti qui, impedit ipsa officia eveniet? Perspiciatis esse tempora aspernatur delectus dolorum deserunt quaerat!</p>
+            </div>
+          </div>      
+        </div>
+        <div class="card image__post">
+          <img src="../assets/img/pet-post-01.png" alt="Icone do Perfil">
+          <div class="card__description">
+            <div class="card__description__profile">
+              <h2>@Profile</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a similique aliquid aspernatur ab, tempore consequuntur corrupti qui, impedit ipsa officia eveniet? Perspiciatis esse tempora aspernatur delectus dolorum deserunt quaerat!</p>
+            </div>
+          </div>  
+        </div>
+        <div class="card image__post">
+          <img src="../assets/img/pet-post-02.png" alt="Icone do Perfil">
+          <div class="card__description">
+            <div class="card__description__profile">
+              <h2>@Profile</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a similique aliquid aspernatur ab, tempore consequuntur corrupti qui, impedit ipsa officia eveniet? Perspiciatis esse tempora aspernatur delectus dolorum deserunt quaerat!</p>
+            </div>
+          </div>  
+        </div>
+        <div class="card image__post">
+          <img src="../assets/img/pet-post-03.png" alt="Icone do Perfil">
+          <div class="card__description">
+            <div class="card__description__profile">
+              <h2>@Profile</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a similique aliquid aspernatur ab, tempore consequuntur corrupti qui, impedit ipsa officia eveniet? Perspiciatis esse tempora aspernatur delectus dolorum deserunt quaerat!</p>
+            </div>
+          </div>  
+        </div>
+      </main>
+    </div>
+    <script src="../js/profile.js"></script>
+  </body>
 </html>
