Modal mensagem de feedback

--- a/pages/modal/modal-post.html
+++ b/pages/modal/modal-post.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modal - iPet</title>
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -33,7 +32,7 @@
           </div>
           <div class="header__profile">
             <div class="image__profile">
-              <img src="../../assets/img/icon-dog.svg" alt="" />
+              <img src="../../assets/icon/icon-dog.svg" alt="" />
             </div>
 
             <div class="info__profile">
