--- a/pages/profile.html
+++ b/pages/profile.html
@@ -12,14 +12,15 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
 		/>
     <!-- Style -->
     <link rel="stylesheet" href="../css/global.css" />
+    <link rel="stylesheet" href="../css/menu.css">
     <link rel="stylesheet" href="../css/profile.css" />
+    <link rel="stylesheet" href="../../css/modal-post.css" />
   </head>
   <body>
     <div class="container-fluid">
@@ -75,6 +76,52 @@
           </div>  
         </div>
       </main>
+
+      <!-- Modal de cadastro -->
+      <div class="modal-post">
+        <div class="modal__content">
+          <div class="row">
+            <div class="col-md-12 title">
+              <h1 class="title__name">Criar Publicação</h1>
+              <div class="closed">
+                <img src="../assets/icon/closed.svg" alt="" />
+              </div>
+            </div>
+          </div>
+          <div class="header__profile">
+            <div class="image__profile">
+              <img src="../assets/icon/icon-dog.svg" alt="" />
+            </div>
+
+            <div class="info__profile">
+              <div class="line-detail"></div>
+              <h3 class="name__profile">@Profile</h3>
+            </div>
+          </div>
+          <div class="box__image">            
+            <div class="image__upload"></div>
+          </div>
+          <div class="form_post">
+            <form action="">
+              <div class="content__post">
+                <textarea
+                  name="coment"
+                  id="coment"
+                  cols="30"
+                  rows="3"
+                  placeholder="Insira seu comentário da postagem"
+                ></textarea>
+                  
+                <div class="d-flex justify-content-between align-items-center w-100 count__comment">
+                  <span>0/100</span>
+                  <img src="../assets/icon/icon-post-img.svg" alt="" class="img-thumbnail"/>
+                </div>
+              </div>
+              <button class="btn-post">Publicar</button>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="../js/profile.js"></script>
   </body>
