--- a/pages/modal/modal-message.html
+++ b/pages/modal/modal-message.html
@@ -23,7 +23,10 @@
   </head>
   <body>
     <div class="container">
-      <div class="message box__content">
+      <button class="btn btn-primary open-modal-button">Teste</button>
+    </div>
+    <div class="container-fluid message__container">
+      <div class="message box__content container">
         <div class="message__content">
           <h2 class="message__title">Postagem salva com sucesso!</h2>
           <img
@@ -35,5 +38,7 @@
         </div>
       </div>
     </div>
+
+    <script src="../../js/modal.js"></script>
   </body>
 </html>
