--- a/pages/profile.html
+++ b/pages/profile.html
@@ -12,13 +12,13 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-		/>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+    />
     <!-- Style -->
     <link rel="stylesheet" href="../css/global.css" />
-    <link rel="stylesheet" href="../css/menu.css">
+    <link rel="stylesheet" href="../css/menu.css" />
     <link rel="stylesheet" href="../css/profile.css" />
     <link rel="stylesheet" href="../../css/modal-post.css" />
   </head>
@@ -28,52 +28,78 @@
         <div class="menu__content">
           <div class="nav-border">
             <a href="/pages/feed.html">
-              <img src="../assets/icon/icon-profile.svg" alt="Icone do Perfil">
-            </a>      
+              <img
+                src="../assets/icon/icon-profile.svg"
+                alt="Icone do Perfil"
+              />
+            </a>
           </div>
           <div class="nav-border">
-            <a href="#">
-              <img src="../assets/icon/icon-post.svg" alt="Adicionar uma nova postagem">
+            <a class="open__modal" href="#">
+              <img
+                src="../assets/icon/icon-post.svg"
+                alt="Adicionar uma nova postagem"
+              />
             </a>
           </div>
         </div>
       </nav>
       <main class="main__images">
         <div class="card image__post">
-          <img src="../assets/img/feed-main.png" alt="Icone do Perfil">
+          <img src="../assets/img/feed-main.png" alt="Icone do Perfil" />
           <div class="card__description">
             <div class="card__description__profile">
               <h2>@Profile</h2>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a similique aliquid aspernatur ab, tempore consequuntur corrupti qui, impedit ipsa officia eveniet? Perspiciatis esse tempora aspernatur delectus dolorum deserunt quaerat!</p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a
+                similique aliquid aspernatur ab, tempore consequuntur corrupti
+                qui, impedit ipsa officia eveniet? Perspiciatis esse tempora
+                aspernatur delectus dolorum deserunt quaerat!
+              </p>
             </div>
-          </div>      
+          </div>
         </div>
         <div class="card image__post">
-          <img src="../assets/img/pet-post-01.png" alt="Icone do Perfil">
+          <img src="../assets/img/pet-post-01.png" alt="Icone do Perfil" />
           <div class="card__description">
             <div class="card__description__profile">
               <h2>@Profile</h2>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a similique aliquid aspernatur ab, tempore consequuntur corrupti qui, impedit ipsa officia eveniet? Perspiciatis esse tempora aspernatur delectus dolorum deserunt quaerat!</p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a
+                similique aliquid aspernatur ab, tempore consequuntur corrupti
+                qui, impedit ipsa officia eveniet? Perspiciatis esse tempora
+                aspernatur delectus dolorum deserunt quaerat!
+              </p>
             </div>
-          </div>  
+          </div>
         </div>
         <div class="card image__post">
-          <img src="../assets/img/pet-post-02.png" alt="Icone do Perfil">
+          <img src="../assets/img/pet-post-02.png" alt="Icone do Perfil" />
           <div class="card__description">
             <div class="card__description__profile">
               <h2>@Profile</h2>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a similique aliquid aspernatur ab, tempore consequuntur corrupti qui, impedit ipsa officia eveniet? Perspiciatis esse tempora aspernatur delectus dolorum deserunt quaerat!</p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a
+                similique aliquid aspernatur ab, tempore consequuntur corrupti
+                qui, impedit ipsa officia eveniet? Perspiciatis esse tempora
+                aspernatur delectus dolorum deserunt quaerat!
+              </p>
             </div>
-          </div>  
+          </div>
         </div>
         <div class="card image__post">
-          <img src="../assets/img/pet-post-03.png" alt="Icone do Perfil">
+          <img src="../assets/img/pet-post-03.png" alt="Icone do Perfil" />
           <div class="card__description">
             <div class="card__description__profile">
               <h2>@Profile</h2>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a similique aliquid aspernatur ab, tempore consequuntur corrupti qui, impedit ipsa officia eveniet? Perspiciatis esse tempora aspernatur delectus dolorum deserunt quaerat!</p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a
+                similique aliquid aspernatur ab, tempore consequuntur corrupti
+                qui, impedit ipsa officia eveniet? Perspiciatis esse tempora
+                aspernatur delectus dolorum deserunt quaerat!
+              </p>
             </div>
-          </div>  
+          </div>
         </div>
       </main>
 
@@ -98,7 +124,7 @@
               <h3 class="name__profile">@Profile</h3>
             </div>
           </div>
-          <div class="box__image">            
+          <div class="box__image">
             <div class="image__upload"></div>
           </div>
           <div class="form_post">
@@ -111,10 +137,16 @@
                   rows="3"
                   placeholder="Insira seu comentário da postagem"
                 ></textarea>
-                  
-                <div class="d-flex justify-content-between align-items-center w-100 count__comment">
+
+                <div
+                  class="d-flex justify-content-between align-items-center w-100 count__comment"
+                >
                   <span>0/100</span>
-                  <img src="../assets/icon/icon-post-img.svg" alt="" class="img-thumbnail"/>
+                  <img
+                    src="../assets/icon/icon-post-img.svg"
+                    alt=""
+                    class="img-thumbnail"
+                  />
                 </div>
               </div>
               <button class="btn-post">Publicar</button>
@@ -124,5 +156,7 @@
       </div>
     </div>
     <script src="../js/profile.js"></script>
+    <script src="../../js/modal-post.js
+    "></script>
   </body>
 </html>
