--- a/pages/profile.html
+++ b/pages/profile.html
@@ -29,7 +29,7 @@
 						</a>
 					</div>
 					<div class="nav-border">
-						<a href="#">
+						<a href="#" id="open__modal">
 							<img
 								src="../assets/icon/icon-post.svg"
 								alt="Adicionar uma nova postagem"
@@ -41,10 +41,12 @@
 
 			<div class="profile">
 				<div class="profile__img">
-					<img src="../assets/img/img-profile.svg" alt="">
+					<img src="../assets/img/img-profile.svg" alt="" />
 					<small>@Profile</small>
 				</div>
-				<div class="text-center profile__paragraph border-bottom border-info p-2">
+				<div
+					class="text-center profile__paragraph border-bottom border-info p-2"
+				>
 					<span>Minhas publicações</span>
 				</div>
 			</div>
@@ -53,13 +55,17 @@
 				<div class="row">
 					<div class="col col-md-6 p-1">
 						<div class="image__post">
-							<img src="../assets/img/pet-post-01.png" class="img-fluid" alt="Icone do Perfil" />
+							<img
+								src="../assets/img/pet-post-01.png"
+								class="img-fluid"
+								alt="Icone do Perfil"
+							/>
 							<div class="card__description">
 								<p>
-									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a
-									similique aliquid aspernatur ab, tempore consequuntur corrupti
-									qui, impedit ipsa officia eveniet? Perspiciatis esse tempora
-									aspernatur delectus dolorum deserunt quaerat!
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos,
+									a similique aliquid aspernatur ab, tempore consequuntur
+									corrupti qui, impedit ipsa officia eveniet? Perspiciatis esse
+									tempora aspernatur delectus dolorum deserunt quaerat!
 								</p>
 								<div class="text-center created__at">
 									<span>Data da criação: <small>10/08/2022</small></span>
@@ -69,7 +75,11 @@
 					</div>
 					<div class="col col-md-6 p-1">
 						<div class="image__post">
-							<img src="../assets/img/pet-post-02.png" class="img-fluid"  alt="Icone do Perfil" />
+							<img
+								src="../assets/img/pet-post-02.png"
+								class="img-fluid"
+								alt="Icone do Perfil"
+							/>
 							<div class="card__description">
 								<p>
 									<!-- Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a
@@ -82,78 +92,97 @@
 								</div>
 							</div>
 						</div>
-						
 					</div>
-				</div>
-        <div class="row">
-					<div class="col col-sm-12 col-md-6 p-1">
-						<div class="image__post">
-							<img src="../assets/img/pet-post-03.png" class="img-fluid" alt="Icone do Perfil" />
-							<div class="card__description">
-								<p>
-									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a
-									similique aliquid aspernatur ab, tempore consequuntur corrupti
-									qui, impedit ipsa officia eveniet? Perspiciatis esse tempora
-									aspernatur delectus dolorum deserunt quaerat!
-								</p>
-								<div class="text-center created__at">
-									<span>Data da criação: <small>10/08/2022</small></span>
-								</div>
-							</div>
-						</div>						
-					</div>
-          <div class="col col-sm-12 col-md-6 p-1">
-						<div class="image__post">
-							<img src="../assets/img/pet-post-04.png" class="img-fluid" alt="Icone do Perfil" />
-							<div class="card__description">
-								<p>
-									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a
-									similique aliquid aspernatur ab, tempore consequuntur corrupti
-									qui, impedit ipsa officia eveniet? Perspiciatis esse tempora
-									aspernatur delectus dolorum deserunt quaerat!
-								</p>
-								<div class="text-center created__at">
-									<span>Data da criação: <small>10/08/2022</small></span>
-								</div>
-							</div>
-						</div>
-          </div>
 				</div>
 				<div class="row">
 					<div class="col col-sm-12 col-md-6 p-1">
 						<div class="image__post">
-							<img src="../assets/img/pet-post-02.png" class="img-fluid" alt="Icone do Perfil" />
+							<img
+								src="../assets/img/pet-post-03.png"
+								class="img-fluid"
+								alt="Icone do Perfil"
+							/>
 							<div class="card__description">
 								<p>
-									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a
-									similique aliquid aspernatur ab, tempore consequuntur corrupti
-									qui, impedit ipsa officia eveniet? Perspiciatis esse tempora
-									aspernatur delectus dolorum deserunt quaerat!
-								</p>
-								<div class="text-center created__at">
-									<span>Data da criação: <small>10/08/2022</small></span>
-								</div>
-							</div>
-						</div>						
-					</div>
-          <div class="col col-sm-12 col-md-6 p-1">
-						<div class="image__post">
-							<img src="../assets/img/pet-post-01.png" class="img-fluid" alt="Icone do Perfil" />
-							<div class="card__description">
-								<p>
-									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, a
-									similique aliquid aspernatur ab, tempore consequuntur corrupti
-									qui, impedit ipsa officia eveniet? Perspiciatis esse tempora
-									aspernatur delectus dolorum deserunt quaerat!
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos,
+									a similique aliquid aspernatur ab, tempore consequuntur
+									corrupti qui, impedit ipsa officia eveniet? Perspiciatis esse
+									tempora aspernatur delectus dolorum deserunt quaerat!
 								</p>
 								<div class="text-center created__at">
 									<span>Data da criação: <small>10/08/2022</small></span>
 								</div>
 							</div>
 						</div>
-          </div>
+					</div>
+					<div class="col col-sm-12 col-md-6 p-1">
+						<div class="image__post">
+							<img
+								src="../assets/img/pet-post-04.png"
+								class="img-fluid"
+								alt="Icone do Perfil"
+							/>
+							<div class="card__description">
+								<p>
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos,
+									a similique aliquid aspernatur ab, tempore consequuntur
+									corrupti qui, impedit ipsa officia eveniet? Perspiciatis esse
+									tempora aspernatur delectus dolorum deserunt quaerat!
+								</p>
+								<div class="text-center created__at">
+									<span>Data da criação: <small>10/08/2022</small></span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col col-sm-12 col-md-6 p-1">
+						<div class="image__post">
+							<img
+								src="../assets/img/pet-post-02.png"
+								class="img-fluid"
+								alt="Icone do Perfil"
+							/>
+							<div class="card__description">
+								<p>
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos,
+									a similique aliquid aspernatur ab, tempore consequuntur
+									corrupti qui, impedit ipsa officia eveniet? Perspiciatis esse
+									tempora aspernatur delectus dolorum deserunt quaerat!
+								</p>
+								<div class="text-center created__at">
+									<span>Data da criação: <small>10/08/2022</small></span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col col-sm-12 col-md-6 p-1">
+						<div class="image__post">
+							<img
+								src="../assets/img/pet-post-01.png"
+								class="img-fluid"
+								alt="Icone do Perfil"
+							/>
+							<div class="card__description">
+								<p>
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos,
+									a similique aliquid aspernatur ab, tempore consequuntur
+									corrupti qui, impedit ipsa officia eveniet? Perspiciatis esse
+									tempora aspernatur delectus dolorum deserunt quaerat!
+								</p>
+								<div class="text-center created__at">
+									<span>Data da criação: <small>10/08/2022</small></span>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
+
+			<!-- Modal de cadastro -->
+			<div class="modal-post" id="is-visible"></div>
 		</div>
+    <script src="../js/modal-post.js"></script>
 	</body>
 </html>
