Ajuste do modal post[

--- a/pages/modal/modal-post.html
+++ b/pages/modal/modal-post.html
@@ -30,7 +30,7 @@
 				<textarea
 					name="coment"
 					cols="30"
-					rows="3"
+					rows="2"
           onkeyup="counterNumberCharacters(event)"
 					placeholder="Insira seu comentário da postagem"
 				></textarea>
@@ -50,7 +50,7 @@
 					/>
 				</div>
 			</div>
-			<button class="btn-post">Publicar</button>
+			<button class="btn btn-post">Publicar</button>
 		</form>
 	</div>
 </div>
