Novos ajustes no modal, profile e feed

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									alt="Logo da iPet Social"
 								/>
                 <div class="line__figure"></div>
-                <h2 class="header__title title-desk">Bem vindo</h2>
+                <h2 class="header__title title-desk">Bem - vindo</h2>
 								<p class="login__title">Login</p>
 							</header>
 							<div
