--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
 		<!-- Style -->
 		<link rel="stylesheet" href="./css/global.css" />
 		<link rel="stylesheet" href="./css/login.css" />
-		<!-- <script src="https://www.gstatic.com/firebasejs/9.8.4/firebase-app-compat.js"></script>
-		<script src="https://www.gstatic.com/firebasejs/9.8.4/firebase-auth-compat.js"></script>
-		<script src="https://www.gstatic.com/firebasejs/9.8.4/firebase-firestore-compat.js"></script>
+		<!-- <script src="https://www.gstatic.com/firebasejs/9.9.0/firebase-app-compat.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/9.8.4/firebase-auth-compat.js"></script> -->
+		<!-- <script src="https://www.gstatic.com/firebasejs/9.8.4/firebase-firestore-compat.js"></script>
 		<script src="index.js"></script>
     <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
 <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" /> -->
 		<script src="https://accounts.google.com/gsi/client" async defer></script>
+		<script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script>
 	</head>
 	<body>
 		<div class="container-fluid">
@@ -56,26 +57,12 @@
                 <h2 class="header__title title-desk">Bem - vindo</h2>
 								<p class="login__title">Login</p>
 							</header>
-							<div
-								id="g_id_onload"
-								data-client_id="YOUR_GOOGLE_CLIENT_ID"
-								data-login_uri="http://localhost/pages/profile.html"
-								data-auto_prompt="false"
-							></div>
-							<div
-								class="g_id_signin"
-								data-type="standard"
-								data-size="large"
-								data-theme="filled_blue"
-								data-text="sign_in_with"
-								data-shape="pill"
-								data-logo_alignment="left"
-                class="btn-login-google"
-							></div>
+							<div id="buttonDiv"></div>
 						</div>
 					</section>
 				</div>
 			</div>
 		</div>
+		<script src="./js/login.js"></script>
 	</body>
 </html>
