--- a/pages/modal/modal-post.html
+++ b/pages/modal/modal-post.html
@@ -9,7 +9,7 @@
       </div>
     </div>
   </div>
-  <div class="header__profile">
+  <!-- <div class="header__profile">
     <div class="image__profile">
       <img src="../assets/icon/icon-dog.svg" alt="" />
     </div>
@@ -18,7 +18,7 @@
       <div class="line-detail"></div>
       <h3 class="name__profile">@Profile</h3>
     </div>
-  </div>
+  </div> -->
   <div class="box__image">
     <div class="image__upload">
       <img src="../assets/icon/icon-dog.svg" alt="" />
